# Streamlit_HuggingFace_Chat

./: .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: cleanup.py
src/: __init__.py  main.py
src/api/: huggingface.py
src/cache/: __init__.py  base.py  memory_cache.py  redis_cache.py
src/config/: settings.py
src/ui/: streamlit_ui.py
src/utils/: file_handler.py  logger.py  message_formatter.py
